# PrxyClaude

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.python  PLAN.md  README.md  docker-compose.py.yml  docker-compose.yml  nvidia_nim_models.json  package-lock.json  package.json  prxyclaude-pick  pyproject.toml  server.py  tsconfig.json
admin/: ui.html
api/: admin_config.py  admin_routes.py  app.py  dependencies.py  gateway_model_ids.py  model_router.py  openai_compat.py  request_pipeline.py  request_utils.py  routes.py  services.py
api/admin_static/: admin.css  admin.js  bg.js  index.html
api/models/: anthropic.py  openai.py  responses.py
api/web_tools/: constants.py
assets/: how-it-works.mmd
cli/: claude_env.py  entrypoints.py  process_registry.py
cli/launchers/: __init__.py  claude.py  codex.py  codex_model_catalog.py
config/: constants.py  nim.py  paths.py  provider_catalog.py  settings.py
core/: cache.py  circuit_breaker.py  key_manager.py  metrics.py  queue.py  rate_limiter.py  subagent_control.py  types.py  usage_tracker.py
core/anthropic/: errors.py  native_messages_request.py  sse.py  tokens.py  tools.py
messaging/: __init__.py  base.py  discord.py  handler.py  telegram.py
providers/: __init__.py  anthropic_messages.py  base.py  defaults.py  error_mapping.py  openai_compat.py  rate_limit.py  registry.py  transform.py
providers/anthropic_direct/: __init__.py  client.py  request.py
providers/bai/: __init__.py  client.py  request.py
providers/cloudflare_gateway/: __init__.py  client.py  request.py
providers/common/: __init__.py  message_converter.py  optimizer.py  sse_builder.py  text.py  thinking_parser.py  tool_parser.py  utils.py
providers/fireworks/: __init__.py  client.py  request.py
providers/gemini/: __init__.py  client.py  request.py
providers/modelscope/: __init__.py  client.py  request.py
providers/nvidia_nim/: request.py
providers/open_router/: client.py
providers/openai/: client.py  request.py
providers/siliconflow/: __init__.py  (+2 more)
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
smoke/: README.md  __init__.py  capabilities.py  conftest.py  features.py
src/: cache.ts  circuit-breaker.ts  config.ts  key-manager.ts  lib.rs  logger.ts  metrics.ts  queue.ts  server.ts  tests.rs  types.ts
src/api/models/: Cargo.toml  mod.rs
tests/: test_core.py  test_optimizer.py  test_providers.py
voice/: base.py  factory.py  whisper_local.py  whisper_nim.py
(+149 files in other folders)
