[package]
name = "pxyclaude-models"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code Proxy Team"]
license = "MIT"
repository = "https://github.com/your-org/PxyClaude"
description = "API models for PxyClaude proxy server"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
thiserror = "1.0"